# nockchain

./: .gitignore  Cargo.toml  Makefile
.github/.workflows/: slsa3.yaml
.github/workflows/: slsa3.yaml
assets/: dumb.jam
crates/ncwrap/: Cargo.toml
crates/ncwrap/src/: main.rs  vals.json
crates/nockapp/src/nockapp/: mod.rs
crates/nockchain-wallet-lib/: Cargo.toml
crates/nockchain-wallet-lib/src/: lib.rs  main.rs
crates/nockchain/src/: lib.rs
crates/wallet/: Cargo.toml
crates/wallet/src/: error.rs  lib.rs  main.rs  wire.rs
hoon/apps/wallet/: wallet.hoon
