[package]
name = "wallet"
version.workspace = true
edition.workspace = true

# Define both a library and a binary
[lib]
name = "wallet"
path = "src/lib.rs"

[[bin]]
name = "wallet"
path = "src/main.rs"

[dependencies]
crown = { workspace = true }
kernels = { workspace = true, features = ["wallet"] }
sword = { workspace = true }
sword_macros = { workspace = true }

bardecoder = { workspace = true }
clap = { workspace = true, features = ["derive"] }
crossterm.workspace = true
either.workspace = true
getrandom.workspace = true
image = { workspace = true }
qrcode = { workspace = true }
ratatui.workspace = true
tempfile.workspace = true
termimad.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zkvm-jetpack = { workspace = true }
